[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/keh_nodes/cam3d/cam3d.tscn" type="PackedScene" id=1]
[ext_resource path="res://demos/network/scenes/cam_control.gd" type="Script" id=2]
[ext_resource path="res://demos/network/scripts/rectdrawer.gd" type="Script" id=3]

[node name="cam_control" type="Spatial"]
script = ExtResource( 2 )

[node name="camera" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 0, 0 )
arm_length = 18.0
interpolate_pivot = true
interpolate_orientation = true
camera_lag = 2
collision_mode = 0
near = 0.05

[node name="floor_locator" type="RayCast" parent="."]
cast_to = Vector3( 0, -5, 0 )

[node name="rect_drawer" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="selecthelper" type="Spatial" parent="."]

[node name="top_left_near" type="Spatial" parent="selecthelper"]

[node name="top_right_near" type="Spatial" parent="selecthelper"]

[node name="bottom_right_near" type="Spatial" parent="selecthelper"]

[node name="bottom_left_near" type="Spatial" parent="selecthelper"]

[node name="top_left_far" type="Spatial" parent="selecthelper"]

[node name="top_right_far" type="Spatial" parent="selecthelper"]

[node name="bottom_right_far" type="Spatial" parent="selecthelper"]

[node name="bottom_left_far" type="Spatial" parent="selecthelper"]
